feat: implements join channel process in frontend
